Bug 184515 - Advanced configuration settings doesn't display hidden folders for selection
Summary: Advanced configuration settings doesn't display hidden folders for selection
Status: RESOLVED FIXED
Alias: None
Product: nepomuk
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Sebastian Trueg
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-02-16 13:05 UTC by hyper_ch
Modified: 2009-02-19 10:30 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description hyper_ch 2009-02-16 13:05:44 UTC
Version:            (using KDE 4.2.0)
OS:                Linux
Installed from:    Ubuntu Packages

When you go to system settings --> desktop search --> advance settings you are presented a filesystem tree where you can chose what to index.

The problem is that hidden directories are not shown. As I use disconnected IMAP with kdepim I have a local copy of all my mail that I want to index but I can't just do that because in the exclusions I don't want everything hidden to be indexed.

It would be good if in the tree also hidden directories could be selected.
Comment 1 Sebastian Trueg 2009-02-19 10:30:08 UTC
SVN commit 928254 by trueg:

Allow to enable indexing of specific hidden folders. In contrast to other folders hidden folders are disabled by default.
I am not sure if this is a perfect solution but it fits the most common use-case: only enabling the indexing of a single 
hidden folder.

Since this intruduces a new string it sadly cannot be backported to KDE 4.2.

BUG: 184515


 M  +15 -2     kcm/folderselectionmodel.cpp  
 M  +4 -1      kcm/folderselectionmodel.h  
 M  +65 -64    kcm/nepomukconfigwidget.ui  
 M  +7 -0      kcm/nepomukserverkcm.cpp  
 M  +5 -2      services/strigi/indexscheduler.cpp  
 M  +6 -12     services/strigi/strigiserviceconfig.cpp  
 M  +1 -2      services/strigi/strigiserviceconfig.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=928254