Allow to enable indexing of specific hidden folders. In contrast to other folders hidden folders are disabled by default. I am not sure if this is a perfect solution but it fits the most common use-case: only enabling the indexing of a single hidden folder.

Since this intruduces a new string it sadly cannot be backported to KDE 4.2.

BUG: 184515

svn path=/trunk/KDE/kdebase/runtime/; revision=928254